--- a/PlayTogether/app/src/main/AndroidManifest.xml
+++ b/PlayTogether/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-2703423759609958~2842346682"/>
+
+
     </application>
 
 </manifest>
