--- a/PlayTogether/app/build.gradle
+++ b/PlayTogether/app/build.gradle
@@ -45,9 +45,14 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.firebase:firebase-database:16.0.4'
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.4'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Custom Toast
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
